[project]
name = "cursor-clone"
version = "0.1.0"
description = "A CLI coding agent powered by Claude and LangGraph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.3.3",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "duckduckgo-search>=6.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]
